--- a/Electric_Flux/Electric_Flux.tex
+++ b/Electric_Flux/Electric_Flux.tex
@@ -111,7 +111,7 @@ $$
 
 where $\theta$ is the angle between the $\bfvec{E}$ and $\bfvec{A}$ vectors.
 
-Any of these equations can be used, and students are encouraged to use the one they are more comfortable with and ideally understand the relationship between the different equations. When finding $\theta$ is simple based on a diagram, $EA\cos\theta$ is usually the easiest to use. When $\bfvec{E}$ and/or $\hat{\mathbf{n}}$ as three components, $\bfvec{E}\bfcdot \hat{\mathbf{n}}A$ is usually easier to use.
+Any of these equations can be used, and students are encouraged to use the one they are more comfortable with and ideally understand the relationship between the different equations. When finding $\theta$ is simple based on a diagram, $EA\cos\theta$ is usually the easiest to use. When $\bfvec{E}$ and/or $\hat{\mathbf{n}}$ has three components, $\bfvec{E}\bfcdot \hat{\mathbf{n}}A$ is usually easier to use.
 
 \newpage
 
@@ -145,7 +145,7 @@ Any of these equations can be used, and students are encouraged to use the one t
         \ifsolutions
         \textbf{Answer}
 
-        \input{figures/Electric_Flux_xz_Plane_Solution_b.tikz}
+        \input{figures/Electric_Flux_xz_Plane_Solution_b.tikz?1706538666741}
 
         a. $\quad\ds\bfvec{E}=E_o\ihat\qquad\phantom{+\frac{E_o}{\sqrt{2}}\jhat}\theta=90^\circ\qquad\qquad\Phi_E=E_oA\cos 90^\circ = 0$
 
@@ -160,11 +160,11 @@ Any of these equations can be used, and students are encouraged to use the one t
 
         \input{figures/Electric_Flux_xz_Plane_Sketch.tikz}
 
-        a. $\quad\ds\bfvec{E}=E_o\ihat\qquad\phantom{+\frac{E_o}{\sqrt{2}}\jhat}\theta=\qquad\qquad\Phi_E$
+        a. $\quad\ds\bfvec{E}=E_o\ihat\qquad\phantom{+\frac{E_o}{\sqrt{2}}\jhat}\theta=\qquad\qquad\Phi_E=$
 
         b. $\quad\ds\bfvec{E}=E_o\jhat\qquad\phantom{+ \frac{E_o}{\sqrt{2}}\jhat}\theta=\qquad\qquad\Phi_E=$ 
 
-        c. $\quad\ds\bfvec{E}=E_o\khat\qquad\phantom{+\frac{E_o}{\sqrt{2}}\jhat}\theta=\qquad\qquad\Phi_E$ 
+        c. $\quad\ds\bfvec{E}=E_o\khat\qquad\phantom{+\frac{E_o}{\sqrt{2}}\jhat}\theta=\qquad\qquad\Phi_E=$ 
 
         d. $\quad\ds\bfvec{E}=\frac{E_o}{\sqrt{2}}\ihat + \frac{E_o}{\sqrt{2}}\jhat\qquad\theta=\qquad\qquad\Phi_E=$
 
