--- a/Electric_Flux/Electric_Flux.tex
+++ b/Electric_Flux/Electric_Flux.tex
@@ -145,7 +145,7 @@ Any of these equations can be used, and students are encouraged to use the one t
         \ifsolutions
         \textbf{Answer}
 
-        \input{figures/Electric_Flux_xz_Plane_Solution_b.tikz?1706538666741}
+        \input{figures/Electric_Flux_xz_Plane_Solution_b.tikz}
 
         a. $\quad\ds\bfvec{E}=E_o\ihat\qquad\phantom{+\frac{E_o}{\sqrt{2}}\jhat}\theta=90^\circ\qquad\qquad\Phi_E=E_oA\cos 90^\circ = 0$
 
@@ -187,7 +187,7 @@ If the area from the previous problem is rotated by $\phi=45^\circ$ around the $
 \ifsolutions
 \textbf{Solution} 
 
-Note that the symbol $\odot$ in c. is used to indicate a vector pointing out of the page.
+Note that the symbol $\odot$ in c. indicates a vector pointing out of the page.
 
 \input{figures/Electric_Flux_XZ_Plane_Rotated_Solution.tikz}
 
@@ -213,11 +213,11 @@ d. $\quad\ds\bfvec{E}=\frac{E_o}{\sqrt{2}}\ihat + \frac{E_o}{\sqrt{2}}\jhat\qqua
 
 \section{$\Phi_E$ Through Closed Surface}
 
-In the previous problem, you computed the flux through an open surface. You should have noted that there are two area vectors to an open surface -- imagine your hand being an open surface. You can put the pencil (1) on the top of your hand with the tip pointing up or (2) in your palm with the tip pointing down. The pencil represents the vector and the tip indicates the direction.
+In the previous problem, you computed the flux through an open surface. You should have noted that there are two area vectors to an open surface -- imagine your hand being an open surface. You can put the pencil (1) on the top of your hand with the tip pointing up or (2) in your palm with the tip pointing down. The pencil represents the vector, and the tip indicates the direction.
 
 Gauss's law, which involves electric flux, always involves a closed surface (if you put water inside a closed surface, it will not leak out). For Gauss's law, there is a convention for which area vector to choose -- it is the one that points outwards from the volume that the surface encloses. 
 
-In the following example, the electric flux is computed through a closed surface (the sides of a cube) by finding the flux through each of the sides of the cube. The total electric flux is the sum of the fluxes though each side.
+In the following example, the electric flux is computed through a closed surface (the sides of a cube) by finding the flux through each of the sides of the cube. The total electric flux is the sum of the fluxes through each side.
 
 %The reason we are interested in knowing the flux through a closed surface is due to a remarkable mathematical result known as Gauss's law. Suppose that you can measure the electric field on an arbitrary and closed surface. The net electric flux through the surface that you compute is related to the total amount of charge inside the surface! For example, if you are given the electric field at all points on the surface of a closed cardboard box, you can compute the total charge inside the box without having to open it. 
 
@@ -314,7 +314,7 @@ $\Phi_E^4=E_{\perp 4}A=-E_oA\cos 30^\circ$
 
 $\Phi_E^5=E_{\perp 5}A=-E_oA\sin 30^\circ$
 
-The negative signs in the last two equations were inserted based on the diagram which shows the electric field points into the volume. These answers are the same as from Method I becuase $\cos 150^\circ = -\cos 30^\circ$ and $\cos 120^\circ = -\sin 30^\circ$.
+The negative signs in the last two equations were inserted based on the diagram, which shows the electric field points into the volume. These answers are the same as from Method I because $\cos 150^\circ = -\cos 30^\circ$ and $\cos 120^\circ = -\sin 30^\circ$.
 
 \emph{Method III}
 
@@ -323,7 +323,7 @@ This is a problem for which using unit vectors is easier in that an additional d
 Based on the diagram, $\hat{\mathbf{n}}_1=\ihat$, $\hat{\mathbf{n}}_2=\jhat$, $\hat{\mathbf{n}}_3=\khat$, $\hat{\mathbf{n}}_4=-\khat$
 $\hat{\mathbf{n}}_5=-\jhat$, $\hat{\mathbf{n}}_6=-\ihat$
 
-Also from the diagram, $\mathbf{E}=E_o\sin30^\circ\jhat+E_o\cos30^\circ\khat$.
+Also, from the diagram, $\mathbf{E}=E_o\sin30^\circ\jhat+E_o\cos30^\circ\khat$.
 
 What remains is to evaluate dot products (you should be able to skip most of the intermediate steps). Using $\mathbf{E}\cdot\mathbf{A}=\mathbf{E}\cdot A\hat{\mathbf{n}}$,
 
