Gauss_Law updates

--- a/Gauss_Law/Gauss_Law.tex
+++ b/Gauss_Law/Gauss_Law.tex
@@ -123,7 +123,7 @@ There are two types of Gaussian surfaces that are used when Gauss's law can be u
 
 \end{enumerate}
 
-\newpage
+%\newpage
 
 \section{Example -- Point Charge}
 
