--- a/Electric_Field/Electric_Field.tex
+++ b/Electric_Field/Electric_Field.tex
@@ -82,7 +82,7 @@
 
 \section{Overview}
 
-The electric field vector, $\bfvec{E}$, is a quantity assigned to a point in space. Given this quantity, we can compute the force a charge $Q$ will experience if it is placed at that point using the equation $\bfvec{F}=Q\bfvec{E}$. The direction of $\bfvec{E}$ is also the direction a positive charge will begin to move if released from rest.
+The electric field vector, $\bfvec{E}$, is a quantity assigned to a point in space. Given this quantity, we can compute the force a charge $Q$ will experience if it is placed at that point using the equation $\bfvec{F}=Q\bfvec{E}$. The direction of $\bfvec{E}$ is also the direction a positive charge will move if released from rest.
 
 To find $\bfvec{E}$ at any point in space, 
 compute the force $\bfvec{F}$ due to all other charges on a hypothetical (or ``test") charge $q_o$ that has an infinitesimal charge and size at a point where you want to know $\bfvec{E}$. To find $\bfvec{E}$ at that point, divide $\bfvec{F}$ by $q_o$.
@@ -138,6 +138,8 @@ $$\bfvec{F}_{q_1\text{ on } q_o}=k\frac{q_1q_o}{5a^2}\left(\frac{2}{\sqrt{5}}\ih
 
 $\ds\bfvec{E}_{\text{at }(a,0) \text{ due to }q_1} = \frac{\bfvec{F}}{q_o}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{1}{\sqrt{5}}\jhat\right)$
 
+\textbf{Check}: Based on a diagram, we expect a positive charge at $$(x,y)=(a,0)$ to have a force on it that is to the right and down, which is consistent with the signs of the components of $\bfvec{E}$.
+
 $E = k|q_1|/5a^2$
 \else
 
@@ -162,6 +164,8 @@ Charge $q_1$ is at $(x,y)=(a, a)$. Find the magnitude of the electric field, $E$
 $E = k|q_1|/2a^2$
 
 $\ds\bfvec{E}_{\text{at }(0,0) \text{ due to }q_1}=-\frac{kq_1}{2a^2}\left(\frac{1}{\sqrt{2}}\ihat +\frac{1}{\sqrt{2}}\jhat\right)$
+
+\textbf{Check}: Based on a diagram, we expect a positive charge at the origin to have a force on it that is to the left and down, which is consistent with the signs of the components of $\bfvec{E}$.
 \else
 
 \input{../Electric_Force/figures/grid.tikz}
