--- a/Gauss_Law/Gauss_Law.tex
+++ b/Gauss_Law/Gauss_Law.tex
@@ -117,7 +117,7 @@ There are two types of Gaussian surfaces that are used when Gauss's law can be u
 
 \begin{enumerate}
 
-  \item For a spherical Gaussian surface, Gauss's law simplifies to $\ds E_rA = {Q_{\text{encl}}}/{\epsilon_o}$, where $A=4\pi r^2$ is a spherical shell with $Q_{\text{encl}}$ inside of it and $E_r$ is the radial electric field.
+  \item For a spherical Gaussian surface, Gauss's law simplifies to $\ds E_rA = {Q_{\text{encl}}}/{\epsilon_o}$, where $A=4\pi r^2$ is the area of a spherical shell with $Q_{\text{encl}}$ inside of it and $E_r$ is the radial electric field.
 
   \item For a cylindrical Gaussian surface, we must consider three surfaces: the two end caps and the curved surface.
 
@@ -139,7 +139,8 @@ $\ds E_r = \frac{1}{4\pi\epsilon_o}\frac{q}{r^2}$, which is what we expect from 
 
 In the Enclosed Charge activity, a non--conducting spherical shell of radius $R$ with a charge of $+3Q$ uniformly distributed on its surface was considered. Its cross--section is shown along with that of a Gaussian sphere of radius $r$ and the same center.
 
-It was found that when the radius $r$ of the Gaussian sphere is less than $R$, $Q_{\text{encl}}=0$. When the $r>R$, $Q_{\text{encl}}=+3Q$:
+It was found that
+$Q_{\text{encl}}=+3Q$:
 
 $$
    Q_{\text{encl}} = \begin{cases}
@@ -183,11 +184,13 @@ $$
         \end{cases}
         $$
 
-  \item The plot is shown below. Notice that inside the uniformly charged shell, the electric field is zero. Outside, the electric field is the same as if all of the charge ($3Q$) was at the origin. This is a result that is often used when solving other problems and should be memorized.
-
-        (You may recall from mechanics that a similar result held -- Newton showed that if mass was uniformly distributed on a spherical shell, the gravitational force on an object anywhere inside the shell was zero; outside the shell, the gravitational force was the same as if all of the mass was at the center of the shell.)
+  \item 
 
         \input{figures/Spherical_Shell_Solution.tikz}
+
+        Notice that inside the uniformly charged shell, the electric field is zero. Outside, the electric field is the same as if all of the charge ($3Q$) was at the origin. This is a result that is often used when solving other problems and should be memorized.
+
+        (You may recall from mechanics that a similar result held -- Newton showed that if mass is uniformly distributed on a spherical shell, the gravitational force on an object anywhere inside the shell is zero; outside the shell, the gravitational force is the same as if all of the mass is at the center of the shell.)
 
 \end{enumerate}
 
@@ -333,7 +336,7 @@ Suppose the charged sphere in the previous problem had a charge density that var
         \ifsolutions
         \textbf{Answer}:
 
-        \input{figures/Solid_Sphere_Variable_Density_E_Solution.tikz?1706719767295}
+        \input{figures/Solid_Sphere_Variable_Density_E_Solution.tikz}
         \else
         \vskip 96pt
         \fi
