--- a/Electric_Potential/Electric_Potential.tex
+++ b/Electric_Potential/Electric_Potential.tex
@@ -93,7 +93,7 @@ There are three cases that you will encounter when evaluating this integral:
 
 \begin{enumerate}
 
-  \item If a force is always perpendicular to the direction of movement, the work due to that force is zero. For example, a block sliding horizontally has a gravitational force exerted on it, but the gravitational force is downward and so is perpendicular to the direction of motion. Thus, gravity does no work.
+  \item If a force is always perpendicular to the direction of movement, the work due to that force is zero. For example, a block sliding horizontally has a gravitational force exerted on it, but the gravitational force is downward, and so is perpendicular to the direction of motion. Thus, gravity does no work.
 
   \item When the force on an object does not change when it is moved a distance $L$ from $a$ to $b$ and the direction of force is always in the same direction as the direction of movement, then
 
@@ -115,7 +115,7 @@ $$
 W_{a\rightarrow b}^{\text{cons}} \equiv -\Delta U = -(U_b-U_a)
 $$
 
-where they symbol $\equiv$ is used to indicate a definition.
+where the symbol $\equiv$ is used to indicate a definition.
 
 In mechanics, you have encountered two conservative forces
 
@@ -201,7 +201,7 @@ The following diagram shows a region of space where the electric field is consta
   \item A charge of $+3\text{ C}$ is moved from $A$ to $B$. (a) How much work was done by the electric field? (b) By how much has the potential energy of the charge changed?
 
         \ifsolutions
-        {\bf Answer}: The charge naturally wants to move from $A$ to $B$ since it is a positive charge and the field line direction indicates the direction of the force on a positive charge. The force the field exerts on the charge is $\bfvec{F}=Q\bfvec{E}=(3\text{ C})(3\text { N/C})\ihat = (9\text{ N})\ihat$, where $\ihat$ points to the right.
+        {\bf Answer}: The charge naturally wants to move from $A$ to $B$ since it is a positive charge, and the field line direction indicates the direction of the force on a positive charge. The force the field exerts on the charge is $\bfvec{F}=Q\bfvec{E}=(3\text{ C})(3\text { N/C})\ihat = (9\text{ N})\ihat$, where $\ihat$ points to the right.
 
         (a) $(+9 \text{ N})(2\text { m})=+18\text{ J}$, and (b) $\Delta U = -18\text{ J}$ (the change in PE, $\Delta U$ is equal and opposite to the work done by the field).
         \else
